--- a/firebase-react/package.json
+++ b/firebase-react/package.json
@@ -1,19 +1,13 @@
 {
-  "name": "twitter-clone",
+  "name": "firebase-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.1",
-    "@mui/material": "^6.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^10.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-flip-move": "^3.0.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
