--- a/todo-app-loadmap/package.json
+++ b/todo-app-loadmap/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-lesson",
+  "name": "todo-app-components",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "vue": "^3.5.12",
@@ -17,10 +16,8 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@vitejs/plugin-vue": "^5.1.4",
-    "@vue/eslint-config-prettier": "^10.1.0",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
-    "prettier": "^3.3.3",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4"
   }
