--- a/youtube-todo-app/package.json
+++ b/youtube-todo-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-lesson",
+  "name": "youtube-todo-app",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -7,21 +7,16 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "lint": "eslint . --fix"
   },
   "dependencies": {
-    "pinia": "^2.3.0",
-    "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue": "^3.5.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@vitejs/plugin-vue": "^5.1.4",
-    "@vue/eslint-config-prettier": "^10.1.0",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
-    "prettier": "^3.3.3",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4"
   }
