--- a/vue-firebase-memo-app/package.json
+++ b/vue-firebase-memo-app/package.json
@@ -11,7 +11,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "firebase": "^11.1.0",
+    "pinia": "^2.3.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
